# instagram-scraper

./: .gitignore  .pre-commit-config.yaml  .tmp_ig_cookie.txt  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml  test_data.ndjson
.github/prompts/: plan-instagramScraperRemediation.prompt.md
.github/workflows/: ci.yml
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/evidence/: bounded-freshness-DVsHusCjCTU-20260310T210323Z.json  bounded-freshness-DVsHusCjCTU-20260310T210551Z.json  task-8-closure-audit.txt  task-8-closure-tests.txt  task-8-pytest.txt  task-8-ty-check.txt  task-9-final-summary.txt
.sisyphus/plans/: believerofbuckets-python-scrape-closure.md
docs/: README.md  architecture.md  audit-remediation-plan.md
docs/plans/: 2026-03-05-unified-instagram-scraper-contract-gap-closure-plan.md  (+3 more)
plans/: naming-analysis-report.md  naming-fix-plan.md
scripts/: README.md  __init__.py  extract_posts.py  extract_posts_browser.py  extract_posts_playwright.py  failfast_instaloader_scrape.py  generate_extraction_commands.py  profile_scraper.py
src/instagram_scraper/: cache.py  (+27 more)
test_data/: comparison_data.ndjson
tests/: conftest.py  test_async_comments.py  test_async_http.py  test_bounded_freshness.py  test_bugfixes.py  test_bugfixes_part1.py  test_bugfixes_part2.py  test_bugfixes_part3.py  test_cache.py  test_capabilities.py  test_cli.py  test_cli_app.py  test_cli_commands.py  test_cli_scrapers.py  test_closure_artifacts.py  test_closure_audit.py  test_comment_dedupe.py  test_comment_reconciliation.py  test_config.py  test_download_instagram_videos.py  test_entrypoint.py  test_error_codes.py  test_exceptions.py  test_exporters.py  test_extract_posts_browser_script.py  test_file_size.py  test_filters.py  test_generate_extraction_commands.py  test_gui.py  test_instagram_http.py  test_logging_config.py  test_logging_utils.py  test_main.py  test_models.py  test_pipeline.py  test_presentation.py  test_profile_profiler.py  test_providers_follow_graph.py  test_providers_hashtag.py  test_providers_interactions.py  (+20 more)
(+77 files in other folders)
