[project]
name = "instagram-scraper"
version = "0.1.0"
description = "Instagram profile scraper - posts, reels, comments, likes + media download"
requires-python = ">=3.10"
dependencies = [
    "instaloader>=4.10",
    "typer>=0.9",
    "pandas>=2.0",
]

[project.scripts]
instagram-scraper = "instagram_scraper.main:app"
