[project]
name = "instagram-scraper"
version = "0.1.0"
description = "Instagram profile scraper - posts, reels, comments, likes + media download"
requires-python = ">=3.11"
dependencies = [
    "instaloader>=4.15,<5",
    "typer>=0.24.1,<0.25",
    "pandas>=3.0.1,<3.1",
]

[project.scripts]
instagram-scraper = "instagram_scraper.main:app"

[dependency-groups]
dev = ["ty>=0.0.22,<0.1"]
